--- a/index.html
+++ b/index.html
@@ -1,16 +1,413 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kohaze - The Coolest Cat</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Arial', sans-serif;
+            background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 50%, #fecfef 100%);
+            min-height: 100vh;
+            overflow-x: hidden;
+        }
+
+        .container {
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            position: relative;
+        }
+
+        .floating-particles {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: 1;
+        }
+
+        .particle {
+            position: absolute;
+            width: 8px;
+            height: 8px;
+            background: rgba(255, 182, 193, 0.6);
+            border-radius: 50%;
+            animation: float 15s infinite linear;
+        }
+
+        @keyframes float {
+            0% {
+                transform: translateY(100vh) rotate(0deg);
+                opacity: 0;
+            }
+
+            10% {
+                opacity: 1;
+            }
+
+            90% {
+                opacity: 1;
+            }
+
+            100% {
+                transform: translateY(-100vh) rotate(360deg);
+                opacity: 0;
+            }
+        }
+
+        .title {
+            font-size: 4rem;
+            color: #ff69b4;
+            text-align: center;
+            margin-bottom: 2rem;
+            text-shadow: 0 0 20px rgba(255, 105, 180, 0.5);
+            animation: glow 2s ease-in-out infinite alternate;
+            z-index: 10;
+            position: relative;
+            font-weight: bold;
+        }
+
+        @keyframes glow {
+            from {
+                text-shadow: 0 0 20px rgba(255, 105, 180, 0.5);
+            }
+
+            to {
+                text-shadow: 0 0 30px rgba(255, 105, 180, 0.8), 0 0 40px rgba(255, 182, 193, 0.6);
+            }
+        }
+
+        .cat-container {
+            position: relative;
+            z-index: 10;
+            margin-bottom: 2rem;
+        }
+
+        .cat-frame {
+            width: 400px;
+            height: 400px;
+            border-radius: 50%;
+            background: linear-gradient(45deg, #ffb6c1, #ff69b4, #dda0dd, #98fb98, #87ceeb);
+            background-size: 400% 400%;
+            animation: gradientShift 4s ease infinite;
+            padding: 8px;
+            box-shadow: 0 0 50px rgba(255, 105, 180, 0.4);
+            transition: transform 0.3s ease;
+        }
+
+        .cat-frame:hover {
+            transform: scale(1.05) rotate(5deg);
+            box-shadow: 0 0 80px rgba(255, 105, 180, 0.6);
+        }
+
+        @keyframes gradientShift {
+            0% {
+                background-position: 0% 50%;
+            }
+
+            50% {
+                background-position: 100% 50%;
+            }
+
+            100% {
+                background-position: 0% 50%;
+            }
+        }
+
+        .cat-image {
+            width: 100%;
+            height: 100%;
+            border-radius: 50%;
+            object-fit: cover;
+            transition: filter 0.3s ease;
+        }
+
+        .cat-frame:hover .cat-image {
+            filter: brightness(1.1) saturate(1.2);
+        }
+
+        .subtitle {
+            color: #ff69b4;
+            font-size: 1.5rem;
+            text-align: center;
+            margin-bottom: 2rem;
+            z-index: 10;
+            position: relative;
+            text-shadow: 0 0 10px rgba(255, 105, 180, 0.3);
+        }
+
+        .features {
+            display: flex;
+            gap: 2rem;
+            margin-top: 2rem;
+            flex-wrap: wrap;
+            justify-content: center;
+            z-index: 10;
+            position: relative;
+            max-width: 1200px;
+            width: 100%;
+        }
+
+        .feature {
+            background: rgba(255, 182, 193, 0.2);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            padding: 1.5rem;
+            color: #ff1493;
+            text-align: center;
+            min-width: 200px;
+            border: 2px solid rgba(255, 105, 180, 0.3);
+            transition: transform 0.3s ease, background 0.3s ease;
+            text-decoration: none;
+            display: block;
+            cursor: pointer;
+            touch-action: manipulation;
+        }
+
+        .feature:hover {
+            transform: translateY(-10px);
+            background: rgba(255, 182, 193, 0.3);
+            border-color: rgba(255, 105, 180, 0.5);
+            text-decoration: none;
+            color: #ff1493;
+        }
+
+        .feature h3 {
+            font-size: 1.3rem;
+            margin-bottom: 0.5rem;
+        }
+
+        .paw-prints {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            pointer-events: none;
+            z-index: 2;
+        }
+
+        .paw {
+            position: absolute;
+            width: 30px;
+            height: 30px;
+            opacity: 0.1;
+            animation: pawFloat 20s infinite linear;
+        }
+
+        @keyframes pawFloat {
+            0% {
+                transform: translate(0, 100vh) rotate(0deg);
+            }
+
+            100% {
+                transform: translate(50px, -100vh) rotate(360deg);
+            }
+        }
+
+        @media (max-width: 768px) {
+            .title {
+                font-size: 2.5rem;
+                margin-bottom: 1.5rem;
+            }
+
+            .cat-frame {
+                width: 280px;
+                height: 280px;
+            }
+
+            .subtitle {
+                font-size: 1.2rem;
+                padding: 0 1rem;
+            }
+
+            .features {
+                flex-direction: column;
+                align-items: center;
+                gap: 1rem;
+                margin-top: 1.5rem;
+            }
+
+            .feature {
+                width: 90%;
+                max-width: 300px;
+                min-width: unset;
+                padding: 1.2rem;
+            }
+
+            .container {
+                padding: 15px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .title {
+                font-size: 2rem;
+                margin-bottom: 1rem;
+            }
+
+            .cat-frame {
+                width: 250px;
+                height: 250px;
+            }
+
+            .subtitle {
+                font-size: 1.1rem;
+            }
+
+            .feature {
+                width: 95%;
+                padding: 1rem;
+            }
+
+            .feature h3 {
+                font-size: 1.1rem;
+            }
+
+            .feature p {
+                font-size: 0.9rem;
+            }
+        }
+
+        @media (min-width: 1200px) {
+            .title {
+                font-size: 5rem;
+            }
+
+            .cat-frame {
+                width: 450px;
+                height: 450px;
+            }
+
+            .subtitle {
+                font-size: 1.8rem;
+            }
+
+            .features {
+                gap: 2.5rem;
+            }
+
+            .feature {
+                min-width: 220px;
+                padding: 2rem;
+            }
+        }
+    </style>
 </head>
 
 <body>
-  Hello world
-  <script src="script.js"></script>
+    <div class="container">
+        <div class="floating-particles" id="particles"></div>
+        <div class="paw-prints" id="pawPrints"></div>
+
+        <h1 class="title">KOHAZE ✨</h1>
+
+        <div class="cat-container">
+            <div class="cat-frame">
+                <img src="kohaze.png" alt="Kohaze the adorable cat" class="cat-image">
+            </div>
+        </div>
+
+        <p class="subtitle">The Most Adorable KittyKat!</p>
+
+        <div class="features">
+            <a href="https://discord.gg/p238Y2yBGC" target="_blank" class="feature">
+                <h3>💖 Discord</h3>
+                <p>Join my server</p>
+            </a>
+            <a href="https://www.tiktok.com/@meowpcs" target="_blank" class="feature">
+                <h3>🌸 TikTok</h3>
+                <p>Follow @meowpcs</p>
+            </a>
+            <a href="https://www.instagram.com/intelarcy" target="_blank" class="feature">
+                <h3>✨ Instagram</h3>
+                <p>Follow @intelarcy</p>
+            </a>
+        </div>
+    </div>
+
+    <script>
+        // Create floating particles
+        function createParticles() {
+            const particlesContainer = document.getElementById('particles');
+            const particleCount = 50;
+
+            for (let i = 0; i < particleCount; i++) {
+                const particle = document.createElement('div');
+                particle.className = 'particle';
+                particle.style.left = Math.random() * 100 + '%';
+                particle.style.animationDelay = Math.random() * 15 + 's';
+                particle.style.animationDuration = (Math.random() * 10 + 10) + 's';
+                particlesContainer.appendChild(particle);
+            }
+        }
+
+        // Create floating paw prints
+        function createPawPrints() {
+            const pawContainer = document.getElementById('pawPrints');
+            const pawCount = 20;
+
+            for (let i = 0; i < pawCount; i++) {
+                const paw = document.createElement('div');
+                paw.className = 'paw';
+                paw.innerHTML = '🐾';
+                paw.style.left = Math.random() * 100 + '%';
+                paw.style.animationDelay = Math.random() * 20 + 's';
+                paw.style.animationDuration = (Math.random() * 15 + 15) + 's';
+                pawContainer.appendChild(paw);
+            }
+        }
+
+        // Add mouse trail effect
+        document.addEventListener('mousemove', (e) => {
+            const trail = document.createElement('div');
+            trail.style.position = 'fixed';
+            trail.style.left = e.clientX + 'px';
+            trail.style.top = e.clientY + 'px';
+            trail.style.width = '6px';
+            trail.style.height = '6px';
+            trail.style.background = 'rgba(255, 105, 180, 0.8)';
+            trail.style.borderRadius = '50%';
+            trail.style.pointerEvents = 'none';
+            trail.style.zIndex = '1000';
+            trail.style.animation = 'fadeOut 1s ease-out forwards';
+
+            document.body.appendChild(trail);
+
+            setTimeout(() => {
+                trail.remove();
+            }, 1000);
+        });
+
+        // Add fadeOut animation for mouse trail
+        const style = document.createElement('style');
+        style.textContent = `
+            @keyframes fadeOut {
+                0% {
+                    opacity: 1;
+                    transform: scale(1);
+                }
+                100% {
+                    opacity: 0;
+                    transform: scale(0);
+                }
+            }
+        `;
+        document.head.appendChild(style);
+
+        // Initialize effects
+        createParticles();
+        createPawPrints();
+    </script>
 </body>
 
 </html>
