--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         <div class="floating-particles" id="particles"></div>
         <div class="paw-prints" id="pawPrints"></div>
 
-        <h1 class="title">KOHAZE ✨</h1>
+        <h1 class="title">Aryan Narayan ✨</h1>
 
         <div class="cat-container">
             <div class="cat-frame">
