--- a/index.html
+++ b/index.html
@@ -14,9 +14,41 @@
 
         body {
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 50%, #fecfef 100%);
+            background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 30%, #a8edea 60%, #fed6e3 100%);
+            background-size: 400% 400%;
+            animation: backgroundShift 8s ease infinite;
             min-height: 100vh;
             overflow-x: hidden;
+            cursor: none;
+        }
+
+        @keyframes backgroundShift {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
+        }
+
+        .custom-cursor {
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            background: radial-gradient(circle, #ff69b4, #ff1493);
+            position: fixed;
+            pointer-events: none;
+            z-index: 9999;
+            transition: transform 0.1s ease;
+            box-shadow: 0 0 20px rgba(255, 105, 180, 0.6);
+        }
+
+        .cursor-follower {
+            width: 40px;
+            height: 40px;
+            border: 2px solid rgba(255, 105, 180, 0.4);
+            border-radius: 50%;
+            position: fixed;
+            pointer-events: none;
+            z-index: 9998;
+            transition: all 0.3s ease;
         }
 
         .container {
@@ -46,22 +78,35 @@
             animation: float 15s infinite linear;
         }
 
+        .heart-particle {
+            position: absolute;
+            font-size: 20px;
+            color: rgba(255, 105, 180, 0.7);
+            animation: heartFloat 12s infinite linear;
+        }
+
         @keyframes float {
             0% {
                 transform: translateY(100vh) rotate(0deg);
                 opacity: 0;
             }
-
-            10% {
-                opacity: 1;
-            }
-
-            90% {
-                opacity: 1;
-            }
-
+            10% { opacity: 1; }
+            90% { opacity: 1; }
             100% {
                 transform: translateY(-100vh) rotate(360deg);
+                opacity: 0;
+            }
+        }
+
+        @keyframes heartFloat {
+            0% {
+                transform: translateY(100vh) rotate(0deg) scale(0.5);
+                opacity: 0;
+            }
+            10% { opacity: 1; }
+            90% { opacity: 1; }
+            100% {
+                transform: translateY(-100vh) rotate(360deg) scale(1.2);
                 opacity: 0;
             }
         }
@@ -76,16 +121,23 @@
             z-index: 10;
             position: relative;
             font-weight: bold;
+            background: linear-gradient(45deg, #ff69b4, #ff1493, #da70d6, #ff69b4);
+            background-size: 400% 400%;
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            animation: glow 2s ease-in-out infinite alternate, textGradient 3s ease infinite;
         }
 
         @keyframes glow {
-            from {
-                text-shadow: 0 0 20px rgba(255, 105, 180, 0.5);
-            }
+            from { text-shadow: 0 0 20px rgba(255, 105, 180, 0.5); }
+            to { text-shadow: 0 0 30px rgba(255, 105, 180, 0.8), 0 0 40px rgba(255, 182, 193, 0.6); }
+        }
 
-            to {
-                text-shadow: 0 0 30px rgba(255, 105, 180, 0.8), 0 0 40px rgba(255, 182, 193, 0.6);
-            }
+        @keyframes textGradient {
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         .cat-container {
@@ -98,31 +150,42 @@
             width: 400px;
             height: 400px;
             border-radius: 50%;
-            background: linear-gradient(45deg, #ffb6c1, #ff69b4, #dda0dd, #98fb98, #87ceeb);
-            background-size: 400% 400%;
+            background: linear-gradient(45deg, #ffb6c1, #ff69b4, #dda0dd, #98fb98, #87ceeb, #ffd700);
+            background-size: 600% 600%;
             animation: gradientShift 4s ease infinite;
             padding: 8px;
             box-shadow: 0 0 50px rgba(255, 105, 180, 0.4);
-            transition: transform 0.3s ease;
+            transition: all 0.3s ease;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .cat-frame::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: linear-gradient(45deg, transparent, rgba(255, 255, 255, 0.3), transparent);
+            animation: shine 3s infinite;
+            pointer-events: none;
+        }
+
+        @keyframes shine {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
 
         .cat-frame:hover {
             transform: scale(1.05) rotate(5deg);
-            box-shadow: 0 0 80px rgba(255, 105, 180, 0.6);
+            box-shadow: 0 0 80px rgba(255, 105, 180, 0.8), 0 0 120px rgba(255, 182, 193, 0.4);
         }
 
         @keyframes gradientShift {
-            0% {
-                background-position: 0% 50%;
-            }
-
-            50% {
-                background-position: 100% 50%;
-            }
-
-            100% {
-                background-position: 0% 50%;
-            }
+            0% { background-position: 0% 50%; }
+            50% { background-position: 100% 50%; }
+            100% { background-position: 0% 50%; }
         }
 
         .cat-image {
@@ -131,6 +194,8 @@
             border-radius: 50%;
             object-fit: cover;
             transition: filter 0.3s ease;
+            position: relative;
+            z-index: 2;
         }
 
         .cat-frame:hover .cat-image {
@@ -145,6 +210,12 @@
             z-index: 10;
             position: relative;
             text-shadow: 0 0 10px rgba(255, 105, 180, 0.3);
+            animation: pulse 2s ease-in-out infinite;
+        }
+
+        @keyframes pulse {
+            0%, 100% { transform: scale(1); }
+            50% { transform: scale(1.05); }
         }
 
         .features {
@@ -160,32 +231,56 @@
         }
 
         .feature {
-            background: rgba(255, 182, 193, 0.2);
-            backdrop-filter: blur(10px);
-            border-radius: 20px;
-            padding: 1.5rem;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(15px);
+            border-radius: 25px;
+            padding: 2rem;
             color: #ff1493;
             text-align: center;
             min-width: 200px;
             border: 2px solid rgba(255, 105, 180, 0.3);
-            transition: transform 0.3s ease, background 0.3s ease;
+            transition: all 0.3s ease;
             text-decoration: none;
             display: block;
             cursor: pointer;
             touch-action: manipulation;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .feature::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+            transition: left 0.5s ease;
+        }
+
+        .feature:hover::before {
+            left: 100%;
         }
 
         .feature:hover {
-            transform: translateY(-10px);
-            background: rgba(255, 182, 193, 0.3);
-            border-color: rgba(255, 105, 180, 0.5);
+            transform: translateY(-15px) scale(1.05);
+            background: rgba(255, 255, 255, 0.2);
+            border-color: rgba(255, 105, 180, 0.6);
+            box-shadow: 0 15px 40px rgba(255, 105, 180, 0.3);
             text-decoration: none;
             color: #ff1493;
         }
 
         .feature h3 {
-            font-size: 1.3rem;
-            margin-bottom: 0.5rem;
+            font-size: 1.4rem;
+            margin-bottom: 0.8rem;
+            font-weight: bold;
+        }
+
+        .feature p {
+            font-size: 1.1rem;
+            opacity: 0.9;
         }
 
         .paw-prints {
@@ -200,20 +295,52 @@
             position: absolute;
             width: 30px;
             height: 30px;
-            opacity: 0.1;
+            opacity: 0.15;
             animation: pawFloat 20s infinite linear;
         }
 
         @keyframes pawFloat {
-            0% {
-                transform: translate(0, 100vh) rotate(0deg);
-            }
-
-            100% {
-                transform: translate(50px, -100vh) rotate(360deg);
-            }
+            0% { transform: translate(0, 100vh) rotate(0deg); }
+            100% { transform: translate(50px, -100vh) rotate(360deg); }
         }
 
+        .sparkle {
+            position: absolute;
+            width: 4px;
+            height: 4px;
+            background: #ffd700;
+            border-radius: 50%;
+            animation: sparkle 2s infinite;
+        }
+
+        @keyframes sparkle {
+            0%, 100% { opacity: 0; transform: scale(0); }
+            50% { opacity: 1; transform: scale(1); }
+        }
+
+        .floating-icons {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+            z-index: 1;
+        }
+
+        .floating-icon {
+            position: absolute;
+            font-size: 24px;
+            opacity: 0.2;
+            animation: iconFloat 15s infinite linear;
+        }
+
+        @keyframes iconFloat {
+            0% { transform: translateY(100vh) rotate(0deg); opacity: 0; }
+            10% { opacity: 0.2; }
+            90% { opacity: 0.2; }
+            100% { transform: translateY(-100vh) rotate(360deg); opacity: 0; }
+        }
+
+        /* Responsive Design */
         @media (max-width: 768px) {
             .title {
                 font-size: 2.5rem;
@@ -241,7 +368,7 @@
                 width: 90%;
                 max-width: 300px;
                 min-width: unset;
-                padding: 1.2rem;
+                padding: 1.5rem;
             }
 
             .container {
@@ -266,15 +393,15 @@
 
             .feature {
                 width: 95%;
-                padding: 1rem;
+                padding: 1.2rem;
             }
 
             .feature h3 {
-                font-size: 1.1rem;
+                font-size: 1.2rem;
             }
 
             .feature p {
-                font-size: 0.9rem;
+                font-size: 1rem;
             }
         }
 
@@ -298,15 +425,19 @@
 
             .feature {
                 min-width: 220px;
-                padding: 2rem;
+                padding: 2.5rem;
             }
         }
     </style>
 </head>
 
 <body>
+    <div class="custom-cursor"></div>
+    <div class="cursor-follower"></div>
+
     <div class="container">
         <div class="floating-particles" id="particles"></div>
+        <div class="floating-icons" id="floatingIcons"></div>
         <div class="paw-prints" id="pawPrints"></div>
 
         <h1 class="title">KOHAZE ✨</h1>
@@ -317,29 +448,43 @@
             </div>
         </div>
 
-        <p class="subtitle">The Most Adorable KittyKat!</p>
+        <p class="subtitle">The Most Adorable KittyKat in the Universe! 🌟</p>
 
         <div class="features">
             <a href="https://discord.gg/p238Y2yBGC" target="_blank" class="feature">
                 <h3>💖 Discord</h3>
-                <p>Join my server</p>
+                <p>Join my magical server</p>
             </a>
             <a href="https://www.tiktok.com/@meowpcs" target="_blank" class="feature">
                 <h3>🌸 TikTok</h3>
-                <p>Follow @meowpcs</p>
+                <p>Follow @meowpcs for cuteness</p>
             </a>
             <a href="https://www.instagram.com/intelarcy" target="_blank" class="feature">
                 <h3>✨ Instagram</h3>
-                <p>Follow @intelarcy</p>
+                <p>Follow @intelarcy for updates</p>
             </a>
         </div>
     </div>
 
     <script>
+        // Custom cursor
+        const cursor = document.querySelector('.custom-cursor');
+        const cursorFollower = document.querySelector('.cursor-follower');
+
+        document.addEventListener('mousemove', (e) => {
+            cursor.style.left = e.clientX + 'px';
+            cursor.style.top = e.clientY + 'px';
+
+            setTimeout(() => {
+                cursorFollower.style.left = e.clientX + 'px';
+                cursorFollower.style.top = e.clientY + 'px';
+            }, 100);
+        });
+
         // Create floating particles
         function createParticles() {
             const particlesContainer = document.getElementById('particles');
-            const particleCount = 50;
+            const particleCount = 60;
 
             for (let i = 0; i < particleCount; i++) {
                 const particle = document.createElement('div');
@@ -349,12 +494,39 @@
                 particle.style.animationDuration = (Math.random() * 10 + 10) + 's';
                 particlesContainer.appendChild(particle);
             }
+
+            // Add heart particles
+            for (let i = 0; i < 20; i++) {
+                const heart = document.createElement('div');
+                heart.className = 'heart-particle';
+                heart.innerHTML = '💖';
+                heart.style.left = Math.random() * 100 + '%';
+                heart.style.animationDelay = Math.random() * 12 + 's';
+                heart.style.animationDuration = (Math.random() * 8 + 12) + 's';
+                particlesContainer.appendChild(heart);
+            }
+        }
+
+        // Create floating icons
+        function createFloatingIcons() {
+            const iconsContainer = document.getElementById('floatingIcons');
+            const icons = ['🐱', '🌟', '✨', '💫', '🎀', '🌸', '💕', '🦄', '🌈', '⭐'];
+
+            for (let i = 0; i < 30; i++) {
+                const icon = document.createElement('div');
+                icon.className = 'floating-icon';
+                icon.innerHTML = icons[Math.floor(Math.random() * icons.length)];
+                icon.style.left = Math.random() * 100 + '%';
+                icon.style.animationDelay = Math.random() * 15 + 's';
+                icon.style.animationDuration = (Math.random() * 10 + 15) + 's';
+                iconsContainer.appendChild(icon);
+            }
         }
 
         // Create floating paw prints
         function createPawPrints() {
             const pawContainer = document.getElementById('pawPrints');
-            const pawCount = 20;
+            const pawCount = 25;
 
             for (let i = 0; i < pawCount; i++) {
                 const paw = document.createElement('div');
@@ -367,25 +539,42 @@
             }
         }
 
-        // Add mouse trail effect
+        // Enhanced mouse trail effect
         document.addEventListener('mousemove', (e) => {
             const trail = document.createElement('div');
             trail.style.position = 'fixed';
             trail.style.left = e.clientX + 'px';
             trail.style.top = e.clientY + 'px';
-            trail.style.width = '6px';
-            trail.style.height = '6px';
-            trail.style.background = 'rgba(255, 105, 180, 0.8)';
+            trail.style.width = '8px';
+            trail.style.height = '8px';
+            trail.style.background = 'radial-gradient(circle, #ff69b4, #ff1493)';
             trail.style.borderRadius = '50%';
             trail.style.pointerEvents = 'none';
             trail.style.zIndex = '1000';
-            trail.style.animation = 'fadeOut 1s ease-out forwards';
+            trail.style.animation = 'fadeOut 1.5s ease-out forwards';
+            trail.style.boxShadow = '0 0 10px rgba(255, 105, 180, 0.6)';
 
             document.body.appendChild(trail);
 
             setTimeout(() => {
                 trail.remove();
-            }, 1000);
+            }, 1500);
+        });
+
+        // Create sparkles on click
+        document.addEventListener('click', (e) => {
+            for (let i = 0; i < 8; i++) {
+                const sparkle = document.createElement('div');
+                sparkle.className = 'sparkle';
+                sparkle.style.left = (e.clientX + Math.random() * 60 - 30) + 'px';
+                sparkle.style.top = (e.clientY + Math.random() * 60 - 30) + 'px';
+                sparkle.style.animationDelay = Math.random() * 0.5 + 's';
+                document.body.appendChild(sparkle);
+
+                setTimeout(() => {
+                    sparkle.remove();
+                }, 2000);
+            }
         });
 
         // Add fadeOut animation for mouse trail
@@ -406,7 +595,21 @@
 
         // Initialize effects
         createParticles();
+        createFloatingIcons();
         createPawPrints();
+
+        // Add hover effect for features
+        document.querySelectorAll('.feature').forEach(feature => {
+            feature.addEventListener('mouseenter', () => {
+                cursor.style.transform = 'scale(1.5)';
+                cursorFollower.style.transform = 'scale(1.5)';
+            });
+
+            feature.addEventListener('mouseleave', () => {
+                cursor.style.transform = 'scale(1)';
+                cursorFollower.style.transform = 'scale(1)';
+            });
+        });
     </script>
 </body>
 
