--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
         /* New style for the surprise text (from previous request) */
         #surprise-text {
-            color: #f0e68c; /* Khaki/light yellow */
+            color: #add8e6; /* Khaki/light yellow */
             font-size: 1.2rem;
             text-align: center;
             margin-top: 2rem;
